kubernetes_readmes/workshop/Part5_practice/ingress_result.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: result-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /result
        backend:
          serviceName: result
          servicePort: 5001
