kubernetes_readmes/workshop/Part5_practice/ingress_vote.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: vote-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: vote
          servicePort: 5000
